@@ -42,15 +42,17 @@ lib_dir_suffix     = @lib_dir_suffix@
 OPT_DISABLE_AVR         = @OPT_DISABLE_AVR@
 OPT_DISABLE_DS390       = @OPT_DISABLE_DS390@
 OPT_DISABLE_DS400       = @OPT_DISABLE_DS400@
-OPT_DISABLE_GBZ80       = @OPT_DISABLE_GBZ80@
 OPT_DISABLE_HC08        = @OPT_DISABLE_HC08@
 OPT_DISABLE_MCS51       = @OPT_DISABLE_MCS51@
 OPT_DISABLE_PIC14       = @OPT_DISABLE_PIC14@
 OPT_DISABLE_PIC16       = @OPT_DISABLE_PIC16@
-OPT_DISABLE_R2K         = @OPT_DISABLE_R2K@
 OPT_DISABLE_XA51        = @OPT_DISABLE_XA51@
-OPT_DISABLE_Z180        = @OPT_DISABLE_Z180@
 OPT_DISABLE_Z80         = @OPT_DISABLE_Z80@
+OPT_DISABLE_Z180        = @OPT_DISABLE_Z180@
+OPT_DISABLE_R2K         = @OPT_DISABLE_R2K@
+OPT_DISABLE_R3KA        = @OPT_DISABLE_R3KA@
+OPT_DISABLE_GBZ80       = @OPT_DISABLE_GBZ80@
+OPT_DISABLE_TLCS90      = @OPT_DISABLE_TLCS90@
 OPT_DISABLE_STM8        = @OPT_DISABLE_STM8@
 
 OPT_ENABLE_DOC          = @OPT_ENABLE_DOC@
